<resources>
    <string name="app_name">RPG Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RPG Notes</string>
    <string name="nav_header_subtitle">Udacity Capstone Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">Total RPG Notes: </string>
    <string name="appwidget_title">RPG Notes widget</string>
    <string name="appwidget_pcnotes">PC Notes: </string>
    <string name="add_widget">Add widget</string>
    <string name="menu_home">RPG Notes</string>
    <string name="menu_add">Add RPG Note</string>
    <string name="menu_search">Search RPG Note</string>
    <string name="menu_pcnotes">RPG Notes - PC Only</string>
    <string name="add_note_title_hint">RPG note title</string>
    <string name="add_note_content_hint">RPG note title content</string>
    <string name="add_note_save_button">Save</string>
    <string name="add_note_save_message"> RPG Note saved</string>
    <string name="add_note_delete_button">Delete</string>
    <string name="add_note_delete_message"> RPG Note deleted</string>
    <string name="search_hint">Search for a RPG Note</string>
    <string name="search_title">Search for a RPG Note</string>
    <string name="input_title_error_message"> Field required </string>
    <string name="CONTENT_DESCRIPTION_HOME">Navigation Item to RPG Notes Home</string>
    <string name="CONTENT_DESCRIPTION_ADD">Navigation Item to Add a RPG Note</string>
    <string name="CONTENT_DESCRIPTION_SEARCH">Navigation Item to Search for a RPG Note</string>
    <string name="CONTENT_DESCRIPTION_ONLY_PC">Navigation Item to Search for only PC RPG Notes</string>
    <string name="CONTENT_DESCRIPTION_TITLE_INPUT">Title Input for RPG note</string>
    <string name="CONTENT_DESCRIPTION_CONTENT_INPUT">Content Input for RPG Note</string>
    <string name="CONTENT_DESCRIPTION_SAVE_BUTTON">Save the RPG Note</string>
    <string name="CONTENT_DESCRIPTION_DELETE_BUTTON">Delete the RPG Note</string>
    <string name="TAG_HOME_FRAGMENT_ANALYTICS">HOME_FRAGMENT_ANALYTICS</string>
    <string name="MSG_HOME_ANALYTICS">Setting screen name: Home Activity</string>
    <string name="IMAGE_HOME_ANALYTICS">Image~HomeActivity</string>
    <string name="EVENT_VIEW_ANALYTICS">View</string>
    <string name="EVENT_RESUME_ANALYTICS">onResume</string>
    <string-array name="note_type">
        <item>PC</item>
        <item>NPC</item>
        <item>Monster</item>
        <item>Item</item>
        <item>Area</item>
    </string-array>
    <string name="INTENT_NOTE_ID">INTENT_NOTE_ID</string>
    <string name="INTENT_NOTE_CONTENT">INTENT_NOTE_CONTENT</string>
    <string name="INTENT_NOTE_TITLE">INTENT_NOTE_TITLE</string>
    <string name="INTENT_NOTE_TYPE">INTENT_NOTE_TYPE</string>
    <string name="fa_glass_martini_solid">&#xf000;</string>
    <string name="fa_music_solid">&#xf001;</string>
    <string name="fa_search_solid">&#xf002;</string>
    <string name="fa_heart_solid">&#xf004;</string>
    <string name="fa_star_solid">&#xf005;</string>
    <string name="fa_user_solid">&#xf007;</string>
    <string name="fa_film_solid">&#xf008;</string>
    <string name="fa_th_large_solid">&#xf009;</string>
    <string name="fa_th_solid">&#xf00a;</string>
    <string name="fa_th_list_solid">&#xf00b;</string>
    <string name="fa_check_solid">&#xf00c;</string>
    <string name="fa_times_solid">&#xf00d;</string>
    <string name="fa_search_plus_solid">&#xf00e;</string>
    <string name="fa_search_minus_solid">&#xf010;</string>
    <string name="fa_power_off_solid">&#xf011;</string>
    <string name="fa_signal_solid">&#xf012;</string>
    <string name="fa_cog_solid">&#xf013;</string>
    <string name="fa_home_solid">&#xf015;</string>
    <string name="fa_clock_solid">&#xf017;</string>
    <string name="fa_road_solid">&#xf018;</string>
    <string name="fa_download_solid">&#xf019;</string>
    <string name="fa_inbox_solid">&#xf01c;</string>
    <string name="fa_redo_solid">&#xf01e;</string>
    <string name="fa_sync_solid">&#xf021;</string>
    <string name="fa_list_alt_solid">&#xf022;</string>
    <string name="fa_lock_solid">&#xf023;</string>
    <string name="fa_flag_solid">&#xf024;</string>
    <string name="fa_headphones_solid">&#xf025;</string>
    <string name="fa_volume_off_solid">&#xf026;</string>
    <string name="fa_volume_down_solid">&#xf027;</string>
    <string name="fa_volume_up_solid">&#xf028;</string>
    <string name="fa_qrcode_solid">&#xf029;</string>
    <string name="fa_barcode_solid">&#xf02a;</string>
    <string name="fa_tag_solid">&#xf02b;</string>
    <string name="fa_tags_solid">&#xf02c;</string>
    <string name="fa_book_solid">&#xf02d;</string>
    <string name="fa_bookmark_solid">&#xf02e;</string>
    <string name="fa_print_solid">&#xf02f;</string>
    <string name="fa_camera_solid">&#xf030;</string>
    <string name="fa_font_solid">&#xf031;</string>
    <string name="fa_bold_solid">&#xf032;</string>
    <string name="fa_italic_solid">&#xf033;</string>
    <string name="fa_text_height_solid">&#xf034;</string>
    <string name="fa_text_width_solid">&#xf035;</string>
    <string name="fa_align_left_solid">&#xf036;</string>
    <string name="fa_align_center_solid">&#xf037;</string>
    <string name="fa_align_right_solid">&#xf038;</string>
    <string name="fa_align_justify_solid">&#xf039;</string>
    <string name="fa_list_solid">&#xf03a;</string>
    <string name="fa_outdent_solid">&#xf03b;</string>
    <string name="fa_indent_solid">&#xf03c;</string>
    <string name="fa_video_solid">&#xf03d;</string>
    <string name="fa_image_solid">&#xf03e;</string>
    <string name="fa_map_marker_solid">&#xf041;</string>
    <string name="fa_adjust_solid">&#xf042;</string>
    <string name="fa_tint_solid">&#xf043;</string>
    <string name="fa_edit_solid">&#xf044;</string>
    <string name="fa_step_backward_solid">&#xf048;</string>
    <string name="fa_fast_backward_solid">&#xf049;</string>
    <string name="fa_backward_solid">&#xf04a;</string>
    <string name="fa_play_solid">&#xf04b;</string>
    <string name="fa_pause_solid">&#xf04c;</string>
    <string name="fa_stop_solid">&#xf04d;</string>
    <string name="fa_forward_solid">&#xf04e;</string>
    <string name="fa_fast_forward_solid">&#xf050;</string>
    <string name="fa_step_forward_solid">&#xf051;</string>
    <string name="fa_eject_solid">&#xf052;</string>
    <string name="fa_chevron_left_solid">&#xf053;</string>
    <string name="fa_chevron_right_solid">&#xf054;</string>
    <string name="fa_plus_circle_solid">&#xf055;</string>
    <string name="fa_minus_circle_solid">&#xf056;</string>
    <string name="fa_times_circle_solid">&#xf057;</string>
    <string name="fa_check_circle_solid">&#xf058;</string>
    <string name="fa_question_circle_solid">&#xf059;</string>
    <string name="fa_info_circle_solid">&#xf05a;</string>
    <string name="fa_crosshairs_solid">&#xf05b;</string>
    <string name="fa_ban_solid">&#xf05e;</string>
    <string name="fa_arrow_left_solid">&#xf060;</string>
    <string name="fa_arrow_right_solid">&#xf061;</string>
    <string name="fa_arrow_up_solid">&#xf062;</string>
    <string name="fa_arrow_down_solid">&#xf063;</string>
    <string name="fa_share_solid">&#xf064;</string>
    <string name="fa_expand_solid">&#xf065;</string>
    <string name="fa_compress_solid">&#xf066;</string>
    <string name="fa_plus_solid">&#xf067;</string>
    <string name="fa_minus_solid">&#xf068;</string>
    <string name="fa_asterisk_solid">&#xf069;</string>
    <string name="fa_exclamation_circle_solid">&#xf06a;</string>
    <string name="fa_gift_solid">&#xf06b;</string>
    <string name="fa_leaf_solid">&#xf06c;</string>
    <string name="fa_fire_solid">&#xf06d;</string>
    <string name="fa_eye_solid">&#xf06e;</string>
    <string name="fa_eye_slash_solid">&#xf070;</string>
    <string name="fa_exclamation_triangle_solid">&#xf071;</string>
    <string name="fa_plane_solid">&#xf072;</string>
    <string name="fa_calendar_alt_solid">&#xf073;</string>
    <string name="fa_random_solid">&#xf074;</string>
    <string name="fa_comment_solid">&#xf075;</string>
    <string name="fa_magnet_solid">&#xf076;</string>
    <string name="fa_chevron_up_solid">&#xf077;</string>
    <string name="fa_chevron_down_solid">&#xf078;</string>
    <string name="fa_retweet_solid">&#xf079;</string>
    <string name="fa_shopping_cart_solid">&#xf07a;</string>
    <string name="fa_folder_solid">&#xf07b;</string>
    <string name="fa_folder_open_solid">&#xf07c;</string>
    <string name="fa_chart_bar_solid">&#xf080;</string>
    <string name="fa_camera_retro_solid">&#xf083;</string>
    <string name="fa_key_solid">&#xf084;</string>
    <string name="fa_cogs_solid">&#xf085;</string>
    <string name="fa_comments_solid">&#xf086;</string>
    <string name="fa_star_half_solid">&#xf089;</string>
    <string name="fa_thumbtack_solid">&#xf08d;</string>
    <string name="fa_trophy_solid">&#xf091;</string>
    <string name="fa_upload_solid">&#xf093;</string>
    <string name="fa_lemon_solid">&#xf094;</string>
    <string name="fa_phone_solid">&#xf095;</string>
    <string name="fa_phone_square_solid">&#xf098;</string>
    <string name="fa_unlock_solid">&#xf09c;</string>
    <string name="fa_credit_card_solid">&#xf09d;</string>
    <string name="fa_rss_solid">&#xf09e;</string>
    <string name="fa_hdd_solid">&#xf0a0;</string>
    <string name="fa_bullhorn_solid">&#xf0a1;</string>
    <string name="fa_certificate_solid">&#xf0a3;</string>
    <string name="fa_hand_point_right_solid">&#xf0a4;</string>
    <string name="fa_hand_point_left_solid">&#xf0a5;</string>
    <string name="fa_hand_point_up_solid">&#xf0a6;</string>
    <string name="fa_hand_point_down_solid">&#xf0a7;</string>
    <string name="fa_arrow_circle_left_solid">&#xf0a8;</string>
    <string name="fa_arrow_circle_right_solid">&#xf0a9;</string>
    <string name="fa_arrow_circle_up_solid">&#xf0aa;</string>
    <string name="fa_arrow_circle_down_solid">&#xf0ab;</string>
    <string name="fa_globe_solid">&#xf0ac;</string>
    <string name="fa_wrench_solid">&#xf0ad;</string>
    <string name="fa_tasks_solid">&#xf0ae;</string>
    <string name="fa_filter_solid">&#xf0b0;</string>
    <string name="fa_briefcase_solid">&#xf0b1;</string>
    <string name="fa_arrows_alt_solid">&#xf0b2;</string>
    <string name="fa_users_solid">&#xf0c0;</string>
    <string name="fa_link_solid">&#xf0c1;</string>
    <string name="fa_cloud_solid">&#xf0c2;</string>
    <string name="fa_flask_solid">&#xf0c3;</string>
    <string name="fa_cut_solid">&#xf0c4;</string>
    <string name="fa_copy_solid">&#xf0c5;</string>
    <string name="fa_paperclip_solid">&#xf0c6;</string>
    <string name="fa_save_solid">&#xf0c7;</string>
    <string name="fa_square_solid">&#xf0c8;</string>
    <string name="fa_bars_solid">&#xf0c9;</string>
    <string name="fa_list_ul_solid">&#xf0ca;</string>
    <string name="fa_list_ol_solid">&#xf0cb;</string>
    <string name="fa_strikethrough_solid">&#xf0cc;</string>
    <string name="fa_underline_solid">&#xf0cd;</string>
    <string name="fa_table_solid">&#xf0ce;</string>
    <string name="fa_magic_solid">&#xf0d0;</string>
    <string name="fa_truck_solid">&#xf0d1;</string>
    <string name="fa_money_bill_solid">&#xf0d6;</string>
    <string name="fa_caret_down_solid">&#xf0d7;</string>
    <string name="fa_caret_up_solid">&#xf0d8;</string>
    <string name="fa_caret_left_solid">&#xf0d9;</string>
    <string name="fa_caret_right_solid">&#xf0da;</string>
    <string name="fa_columns_solid">&#xf0db;</string>
    <string name="fa_sort_solid">&#xf0dc;</string>
    <string name="fa_sort_down_solid">&#xf0dd;</string>
    <string name="fa_sort_up_solid">&#xf0de;</string>
    <string name="fa_envelope_solid">&#xf0e0;</string>
</resources>