<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:contentDescription="@string/CONTENT_DESCRIPTION_HOME"/>
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_add"
            android:contentDescription="@string/CONTENT_DESCRIPTION_ADD"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_search"
            android:contentDescription="@string/CONTENT_DESCRIPTION_SEARCH"/>
        <item
            android:id="@+id/nav_pcnotes"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_pcnotes"
            android:contentDescription="@string/CONTENT_DESCRIPTION_ONLY_PC"/>
    </group>
</menu>