<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_note_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/add_note_title_hint"
        android:contentDescription="@string/CONTENT_DESCRIPTION_TITLE_INPUT">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_note_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/add_note_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/add_note_content_input"
        app:layout_constraintTop_toBottomOf="@+id/add_note_title_input"
        tools:layout_editor_absoluteX="82dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_note_content_input"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_title_input"
        android:hint="@string/add_note_content_hint"
        android:contentDescription="@string/CONTENT_DESCRIPTION_CONTENT_INPUT">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_note_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_note_content_input"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_add_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_content_input"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add_note_save_button"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_content_input"
        android:contentDescription="@string/CONTENT_DESCRIPTION_SAVE_BUTTON"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add_note_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/add_note_content_input"
        android:contentDescription="@string/CONTENT_DESCRIPTION_DELETE_BUTTON"/>


</androidx.constraintlayout.widget.ConstraintLayout>