<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/appWidgetBackgroundColor"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.RPGNotes.AppWidgetContainer"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appwidget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="?attr/appWidgetBackgroundColor"
        android:contentDescription="@string/appwidget_title"
        android:text="@string/appwidget_title"
        android:textColor="?attr/appWidgetTextColor"
        android:textSize="8sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/appwidget_allnotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:background="?attr/appWidgetBackgroundColor"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="?attr/appWidgetTextColor"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/appwidget_PCnotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:background="?attr/appWidgetBackgroundColor"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_pcnotes"
        android:textColor="?attr/appWidgetTextColor"
        android:textSize="12sp"
        android:textStyle="normal" />
</LinearLayout>